--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ footer {
   
 }  
 
-.gallery li p {
+.gallery li > p {
   margin: 0;
   padding: 5%;
   font-size:0.75em;
@@ -153,9 +153,6 @@ footer {
   display: block;
 }
 
-#interests {
-  float: left;
-}
 
 /***************************
 
@@ -166,6 +163,11 @@ footer {
   max-width: 200px;
   margin: 0 auto 30px;
   border-radius: 50%;
+}
+
+
+#interests {
+  float: left;
 }
 
 
