Edited CSS to make gallery images the same size

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ footer {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: table-row;
 }
 
 .gallery li {
@@ -129,7 +130,10 @@ footer {
   background-color: #f5f5f5;
   color: #bdc3c7;
   
-}  
+} 
+.gallery > img {
+  display: table-cell;
+}
 
 .gallery li > p {
   margin: 0;
