Added skills section with some styling. Pushing to check if display is being overridden

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,12 @@ nav a.show, nav a:hover {
   color: #32673f;
 }
 
+#skills {
+  list-style: none;
+  display: inline-block;
+
+}
+
 /***************************
 
     PAGE ABOUT
