--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ nav a.show, nav a:hover {
   list-style: none;
   display: inline-block;
   background-color: #f5f5f5;
-  margin-left: 5%;
+  margin: 1%;
 
 }
 
