--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ nav a.show, nav a:hover {
   display: inline-block;
   background-color: #f5f5f5;
   margin: 1%;
-
+  padding: 1%;
 }
 
 /***************************
