--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ nav a.show, nav a:hover {
   background-color: #f5f5f5;
   margin: 1%;
   padding: 10px;
+  border-radius: 20px;
 }
 
 /***************************
