Fixed css naming error

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,11 +19,11 @@
 	/***************************
     PAGE: PORTFOLIO;
 	***************************/
-	#gallery li {
+	.gallery  li {
 		width: 28.3333%;
 	}
 
-	#gallery li:nth-child(4n) {
+	.gallery li:nth-child(4n) {
 		clear: left;
 	}
 
