Added images for interests section. Added js and css for styling selected nav elements

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,13 @@ nav a{
   font-weight: 800;
   padding: 15px 10px;
 }
+.selected {
+  color: #32673f;
+}
+
+.notSelected {
+  color: #FFFFFF;
+}
 /***************************
 
     FOOTER
