--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ h3 {
   margin: 0 0 1em 0;
 }
 
+section {
+  margin-bottom: 8%;
+}
+
 
 /***************************
 
@@ -173,6 +177,8 @@ nav a.show, nav a:hover {
   margin: 1%;
   padding: 10px;
   border-radius: 20px;
+  background-color: #6ab47b;
+  color: #FFFFFF;
 }
 
 /***************************
@@ -192,6 +198,9 @@ nav a.show, nav a:hover {
   width: 100%;
 }
 
+#awards > ul > li {
+  list-style: none;
+}
 
 
 
@@ -232,4 +241,6 @@ nav a, nav a:visited
 {
   color: #fff ;
 }
+
+
 
