--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 /***************************
     GENERAL
 ***************************/
@@ -5,7 +8,9 @@
 body {
   font-family: 'Open Sans', sans-serif;
   max-width: 100%;
-  overflow: auto;
+  padding: 0%;
+  margin: 0%;
+  
 }
 
 a
@@ -105,7 +110,7 @@ nav a{
 }
 
 .notSelected {
-  color: #FFFFFF;
+   color: #FFFFFF;
 }
 
 /***************************
@@ -115,9 +120,9 @@ nav a{
 
 .textModifier {
   position: absolute;
-  top: 8%;
-  right: 0%;
-  width: 8%;
+  top: 40px;
+  right: 0px;
+  width: 6%;
   padding-right: 1%;
   background-color: #F5F5F5;
   float: right;
@@ -131,6 +136,10 @@ nav a{
   font-family: 'Changa One', sans-serif;
   padding-left: 4px;
   color: #599A68;
+}
+
+.textModifier:hover {
+  cursor: pointer;
 }
 
 #text-down {
@@ -203,6 +212,7 @@ footer {
 
 nav a.show, nav a:hover {
   color: #32673f;
+  cursor: pointer;
 }
 
 #skills > ul > li {
@@ -332,7 +342,7 @@ nav a, nav a:visited
   }
 
   .textModifier {
-    width: 5%;
+    width: 6%;
   }
 }
 
